Fix title spillage on small devices

--- a/src/css/utils/header.styl
+++ b/src/css/utils/header.styl
@@ -18,6 +18,9 @@ header
       max-width 50rem
       line-height 1.3
       margin 0 auto
+      @media screen and (max-width: 374px)
+        font-size 3rem
+        padding 0 1rem
     .opening-sub
       font-family $atlas
       font-size 1.2rem
